# XAMPP_for_DevOps

./: .dockerignore  Cargo.toml  LICENSE  README.md  db.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt  util.py  xampp.db
.github/workflows/: python-app.yml
