[tool.poetry]
name = "xampp"
version = "0.1.0"
description = "xampp scraping & deploy to dockerhub"
authors = ["Guangrei <myawn@pm.me>"]

[tool.poetry.dependencies]
python = ">=3.10.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
anybinding = "^1.0.2"
ftputil = "^5.0.4"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"